--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.8",
+    "clsx": "^2.1.1",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.53.0",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
