--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-toastify": "^10.0.5",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
